--- a/app.css
+++ b/app.css
@@ -1,6 +1,12 @@
 @import "tailwindcss/preflight";
 
+@import "src/assets/css/fonts";
+
 @import "tailwindcss/components";
+
+@import "src/assets/css/grid";
+
+@import "src/assets/css/main";
 
 @import "tailwindcss/utilities";
 
