--- a/src/assets/css/debug-grid.css
+++ b/src/assets/css/debug-grid.css
@@ -1,3 +1,4 @@
+/* Compile order #7 */
 /*
 
    DEBUG GRID
@@ -10,7 +11,7 @@
 */
 @if $cssenv == development {
   body {
-    opacity: 0.5;
+    opacity: 0.7;
   }
 
   .debug-grid {
