--- a/src/assets/css/grid.css
+++ b/src/assets/css/grid.css
@@ -1,3 +1,5 @@
+/* Compile order #4 */
+
 /*  SECTIONS  ============================================================================= */
 
 .section {
