feat: added background image; positioned header

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,7 +6,7 @@ html {
   text-rendering: optimizeLegibility;
 }
 
-.row {
+.br-row {
   max-width: 1140px;
   margin: 0 auto;
 }
@@ -15,7 +15,7 @@ header {
   height: 100vh;
 }
 
-header::after {
+header::before {
   content: "";
   background-image: url("~@img/hero.jpg");
   background-size: cover;
@@ -26,9 +26,8 @@ header::after {
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;
 }
 
-.hero-text-box {
+.br-hero-text-box {
   width: 1140px;
 }
