--- a/src/assets/css/debug-grid.css
+++ b/src/assets/css/debug-grid.css
@@ -10,11 +10,7 @@
 
 */
 @if $cssenv == development {
-  body {
-    opacity: 0.7;
-  }
-
-  .debug-grid {
+  .br-debug-grid {
     background: transparent
       url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAFElEQVR4AWPAC97/9x0eCsAEPgwAVLshdpENIxcAAAAASUVORK5CYII=)
       repeat
@@ -22,7 +18,7 @@
       left;
   }
 
-  .debug-grid-16 {
+  .br-debug-grid-16 {
     background: transparent
       url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMklEQVR4AWOgCLz/b0epAa6UGuBOqQHOQHLUgFEDnAbcBZ4UGwDOkiCnkIhdgNgNxAYAiYlD+8sEuo8AAAAASUVORK5CYII=)
       repeat
@@ -30,7 +26,7 @@
       left;
   }
 
-  .debug-grid-8-solid {
+  .br-debug-grid-8-solid {
     background: white
       url(data:image/gif;base64,R0lGODdhCAAIAPEAAADw/wDx/////wAAACwAAAAACAAIAAACDZQvgaeb/lxbAIKA8y0AOw==)
       repeat
@@ -38,7 +34,7 @@
       left;
   }
 
-  .debug-grid-16-solid {
+  .br-debug-grid-16-solid {
     background: white
       url(data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywAAAAAEAAQAAACIZyPKckYDQFsb6ZqD85jZ2+BkwiRFKehhqQCQgDHcgwEBQA7)
       repeat
