--- a/src/assets/css/utilities.css
+++ b/src/assets/css/utilities.css
@@ -1,6 +1,18 @@
-.db-center {
+.br-position-center {
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.br-position-center-justify {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.br-position-center-align {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
