--- a/src/assets/css/utilities.css
+++ b/src/assets/css/utilities.css
@@ -1,3 +1,9 @@
+/* I will set those myself */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /* Positioning mode has to be defined */
 .br-position-center {
   top: 50%;
