feat: logo fills and scales nicely

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -147,6 +147,7 @@ header::after {
   @apply tw-float-left;
   /* inherit the height explicitly, else the image blows up to it's natural size */
   @apply tw-h-inherit;
+  width: auto;
 }
 
 .br-nav-main {
