--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -153,8 +153,9 @@ header::after {
 .br-header-theme_sticky {
   background-color: hsl(0, 0%, 98%);
   @apply tw-fixed tw-pin-l tw-pin-t tw-w-full tw-max-w-full;
+  /* avoid bleeding background */
   @apply tw-my-0;
-  @apply tw-h-12;
+  @apply tw-h-16;
   z-index: 2;
   padding-left: var(--main-theme-xpadding);
   padding-right: var(--main-theme-xpadding);
@@ -163,8 +164,12 @@ header::after {
 .br-nav-logo {
   @apply tw-float-left;
   /* inherit the height explicitly, else the image blows up to it's natural size */
-  @apply tw-h-inherit;
+  @apply tw-h-full;
   width: auto;
+}
+
+.br-header-theme_sticky .br-nav-logo {
+  /* @apply tw--mt-8; */
 }
 
 .br-nav-main {
